<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_import"
        android:icon="@drawable/ic_action_import"
        android:showAsAction="ifRoom"
        android:title="@string/action_import"/>
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_action_export"
        android:showAsAction="ifRoom"
        android:title="@string/action_export"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_prefs"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/action_about"/>

</menu>